--- a/product-pro.yml
+++ b/product-pro.yml
@@ -42,4 +42,4 @@ logging:
     org.springframework.cloud.sleuth: DEBUG
     
     
-testConfig: product-Profile    
+testConfig: product-Profile 111   
