--- a/product-pro.yml
+++ b/product-pro.yml
@@ -15,6 +15,11 @@ spring:
     database: MySQL
     show-sql: true
     open-in-view: true
+  rabbitmq:
+    host: 39.108.63.30
+    port: 5672
+    username: guest
+    password: guest
   zipkin:
     base-url: http://127.0.0.1:9411/ #server的请求地址
     sender:
